// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Schema createEntry: should work 1`] = `
Object {
  "data": Object {
    "createEntry": Object {
      "Guest": Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "lastName": "Doe",
      },
      "id": "asdf",
      "see": "xyz",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema endEntry: should work 1`] = `
Object {
  "data": Object {
    "endEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2020-02-01T00:00:00",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getByGuestId: should work 1`] = `
Object {
  "data": Object {
    "byGuestId": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getEntry: should work 1`] = `
Object {
  "data": Object {
    "getEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2019-09-30T20:36:57",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry: should work 1`] = `
Object {
  "data": Object {
    "listEntry": Array [
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2019-03-15T00:57:13",
        "endedAt": "2019-09-30T20:36:57",
        "photo": Array [
          Object {
            "id": "57fc9c52-9c37-42e5-9d48-74ef2da5cfdf",
          },
          Object {
            "id": "64b42692-0f01-47ad-be64-5fd94101e9dc",
          },
        ],
        "see": "Derrick Smitham",
      },
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2018-10-31T06:43:08",
        "endedAt": "2019-09-27T14:37:43",
        "photo": Array [
          Object {
            "id": "57fc9c52-9c37-42e5-9d48-74ef2da5cfdf",
          },
          Object {
            "id": "64b42692-0f01-47ad-be64-5fd94101e9dc",
          },
        ],
        "see": "Timmy Bednar",
      },
      Object {
        "Guest": Object {
          "NIK": "2426577447946541",
          "firstName": "Maurine",
          "lastName": "Rath",
        },
        "createdAt": "2018-12-05T00:35:34",
        "endedAt": "2020-02-18T14:57:08",
        "photo": Array [
          Object {
            "id": "57fc9c52-9c37-42e5-9d48-74ef2da5cfdf",
          },
          Object {
            "id": "64b42692-0f01-47ad-be64-5fd94101e9dc",
          },
        ],
        "see": "Roman Adams",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: can be filtered by guestID 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [
      Object {
        "createdAt": "2019-03-15T00:57:13",
        "endedAt": "2019-09-30T20:36:57",
        "see": "Derrick Smitham",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: should work 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
